# nano

./: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  README.md  TODO.md  readme.md
src/: ast.lua  codegen.lua  cutils.lua  error.lua  lexer.h  lexer.hpp  lexer.lua  lib.rs  main.cpp  main.lua  main.rs  parser.hpp  parser.lua  vm.lua
src/ast/: mod.rs
src/codegen/: mod.rs
src/lexer/: lexer.cppm  mod.rs
src/parser/: mod.rs
tests/: CMakeLists.txt  concat.nano  functions.nano  input.nano  printing.nano  test.nano  tests_main.cpp
tests/lexer/: string.h
